# Exoplanet_Life

./: .gitignore  Création_colonne.py  Jupiter-création colonne - Copie.ipynb  Jupiter-création colonne.ipynb  ML.ipynb  MLForest.ipynb  MLForest2.ipynb  MLXGBOOST.ipynb  MLXGBOOST_model (2).ipynb  MLXGBOOST_model - Copie.ipynb  MLXGBOOST_model.ipynb  Transformation.py  clean_dict.json  df_solar.csv  exoplanet_hosts_spectype_clean.csv  installation_environnement_DBT.txt  main.py  model_xgb.pkl  planet_explorer.ipynb  pyproject.toml  requirements.txt
Exoplanet_DBT/: .env  .gitignore  dbt_project.yml
Exoplanet_DBT/ingestion/: ingest_exoplanets.py
Exoplanet_DBT/models/: sources.yml
Exoplanet_DBT/models/example/: Fact_mesures_planet.sql  Fact_mesures_planet.yml
Exoplanet_DBT/models/marts/: dim_etoile.sql  dim_instruments.sql  dim_methode.sql  dim_planete.sql  dim_systeme.sql  fact_exoplanete.sql  marts.yml
Exoplanet_DBT/models/staging/: stg_exoplanets.sql  stg_exoplanets.yml
